[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "runcode"
version = "1.0.0"
description = "RunCode -- AI Agent framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.21.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "websockets",
    "sseclient-py",
    "aiohttp",
]

[project.scripts]
runcode = "runcode.code:main"

[tool.setuptools.packages.find]
include = ["runcode*"]
